# tractor

./: .gitattributes  .gitignore  README.md  makeTechnicalWithTA-lib.c  package.yaml  server-test.ipynb  stack.yaml  stock-charts.ipynb  taFromHiSpeedCSV  tractor.cabal
app/: Main.hs
code-generator/: Main.hs
doc/: Aggregate.html  Conf.html  DataBase.html  Lib.html  Main.html  Model.html  Scheduling.html  Scraper.html  SinkSlack.html  SlackBot.html  StockQuotesCrawler.html  TechnicalIndicators.html  TickerSymbol.html  TimeFrame.html  WebBot.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index.html  mini_Conf.html  (+5 more)
elm-src/: Main.elm  Makefile  Model.elm  Msg.elm  Route.elm  Update.elm  View.elm  elm-package.json
elm-src/AnalyticsPage/: Model.elm  Msg.elm  Update.elm  View.elm
elm-src/PortfolioPage/: Model.elm  Msg.elm  Update.elm  View.elm
elm-src/UploadPage/: Model.elm  Msg.elm  Update.elm  View.elm
elm-src/public/: WebApiDocument.md  main.js
frontend/: Makefile  elm.json  package-lock.json
frontend-elm/: Makefile  webpack.config.js
frontend-elm/public/: app.js  main.js
frontend-elm/src/: Api.elm  Page.elm  Route.elm  Username.elm  index.js
frontend-elm/src/Api/: Endpoint.elm  Endpoint.js
frontend-elm/src/Page/: Blank.elm  Charts.elm  Login.elm  Makefile
frontend-purs/: bash.exe.stackdump  bower.json
frontend-purs/public/: WebApiDocument.md  app.js  index.html
frontend-purs/src/: Api.purs  AppM.purs  Main.purs  Page.purs  Route.purs  Session.purs
frontend-purs/src/Page/: AccountBalance.purs  ApiDocument.purs  Charts.purs  Dashboard.purs  Login.purs  Logout.purs  NotFound.purs  Portfolio.purs  Upload.purs
frontend/public/: WebApiDocument.md  main.js
frontend/src/: Api.elm  Main.elm  Page.elm  Route.elm  Session.elm  Username.elm  Viewer.elm  package-lock.json
frontend/src/Api/: Endpoint.elm
frontend/src/Page/: AccountBalance.elm  ApiDocument.elm  Dashboard.elm  (+4 more)
rust_ta_test/: Cargo.toml  taFromHiSpeedCSV
rust_ta_test/src/: main.rs
src/: Aggregate.hs  BrokerBackend.hs  Conf.hs  ConfHpackageYaml.hs  DataBase.hs  GenBroker.hs  GenScraper.hs  Lib.hs  Model.hs  ModelDef.hs  Scheduling.hs  Scraper.hs  ScraperBackend.hs  SinkSlack.hs  SlackBot.hs  StockQuotesCrawler.hs  TechnicalIndicators.hs  TickerSymbol.hs  TimeFrame.hs  VerRev.hs  WebBot.hs
src/BackOffice/: Agency.hs  StockQuotesCrawler.hs  TechnicalIndicators.hs
src/KabuCom/: Broker.hs  Model.hs  Scraper.hs
src/MatsuiCoJp/: Broker.hs  DataBase.hs  Model.hs  Scraper.hs  WebBot.hs
src/NetService/: ApiTypes.hs  HomePage.hs  HttpError.hs  PlotChart.hs  PubServer.hs  RestApiHandler.hs  Types.hs  UserAuth.hs  WebServer.hs  WebServerConfig.hs
src/SBIsecCoJp/: Broker.hs  Model.hs  Scraper.hs
src/WebAPI/: Server.hs
test/: 03k-db.com_stocks_7312-T.utf8.html  BrokerSpec.hs  ConfSpec.hs  StockQuotesCrawlerSpec.hs  conf.test.json  http%3A%2F%2Fk-db.com%2Findices%2FI101%2F1h.utf8.html  http%3A%2F%2Fk-db.com%2Findices%2FI101.utf8.html  http%3A%2F%2Fk-db.com%2Fstocks%2F8306-T%2F1h.utf8.html
test/KabuCom/: BrokerSpec.hs  ScraperSpec.hs  https%3A%2F%2Fs10.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=3038%26Market=1.utf8.html  https%3A%2F%2Fs10.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=3788%26Market=1.utf8.html  https%3A%2F%2Fs10.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=6770%26Market=1.utf8.html  https%3A%2F%2Fs10.kabu.co.jp%2F_mem_bin%2Flight%2Flogin.asp%3F%2Flight.utf8.html  https%3A%2F%2Fs10.si0.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=6911%26Market=1.utf8.html  https%3A%2F%2Fs10.si0.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=8411%26Market=1.utf8.02.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=1343%26Market=1.utf8.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=1540%26Market=1.utf8.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2FLight%2FTradeTool%2FStockDetail.asp%3FStockCode=8411%26Market=1.utf8.01.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2FLight.utf8.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2Fap%2Flight%2FAssets%2FKanougaku%2FStock.utf8.html  https%3A%2F%2Fs20.si0.kabu.co.jp%2Fap%2Flight%2FStocks%2FStock%2FPosition%2FList.utf8.html
test/MatsuiCoJp/: 01www.deal.matsui.co.jp_servlet_ITS_stock_StkHavingList.utf8.html  02www.deal.matsui.co.jp_servlet_ITS_stock_StkHavingList.utf8.html  BrokerSpec.hs  ScraperSpec.hs  www.deal.matsui.co.jp_servlet_ITS_asset_MoneyToSpare.utf8.html  www.deal.matsui.co.jp_servlet_ITS_home_Announce.utf8.html
test/SBIsecCoJp/: 01k.sbisec.co.jp_bsite_market_indexDetail.do.utf8.html  01k.sbisec.co.jp_bsite_member_acc_holdStockDetail.do.utf8.html  01k.sbisec.co.jp_bsite_member_acc_menu.do.utf8.html  01k.sbisec.co.jp_bsite_member_acc_purchaseMarginDetail.do.utf8.html  01k.sbisec.co.jp_bsite_member_acc_purchaseMarginList.do.utf8.html  BrokerSpec.hs  ScraperSpec.hs  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmarket%2Fmenu.do.utf8.02.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FholdStockDetail.do%3Fcompany_code%3D1111.utf8.02.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FholdStockDetail.do%3Fcompany_code%3D2222.utf8.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FholdStockList.do.utf8.02.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FholdStockList.do.utf8.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FpurchaseMarginDetail.do%3Fno%3D3%26account_type%3D1.utf8.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Facc%2FpurchaseMarginList.do.utf8.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fmember%2Fmenu.do.utf8.html  https%3A%2F%2Fk.sbisec.co.jp%2Fbsite%2Fvisitor%2Ftop.do.utf8.html
(+1 files in other folders)
