name:                tractor
version:             0.2.1
synopsis:            "tractor" is an Assets observation application.
description:         Please see README.md
homepage:            https://github.com/ak1211/tractor
license:             AGPL-3
license-file:        LICENSE
author:              Akihiro Yamamoto
maintainer:          ak1211@mail.ak1211.com
copyright:           (c) 2016, 2017 Akihiro Yamamoto.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib Conf WebBot Scraper SinkSlack DataBase
                       Model
                       Aggregate
                       StockQuotesCrawler
                       TickerSymbol
                       TimeFrame
                       TechnicalIndicators
                       Scheduling
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , safe
                     , mtl
                     , containers
                     , text
                     , bytestring
                     , utf8-string
                     , iconv
                     , time
                     , aeson
                     , conduit
                     , conduit-extra
                     , tagsoup
                     , connection
                     , network-uri
                     , http-types
                     , http-conduit
                     , html-conduit
                     , xml-conduit
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-mysql
                     , esqueleto
                     , resourcet
                     , transformers
                     , monad-logger
                     , mwc-random
                     , parsec
  default-language:    Haskell2010

executable tractor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -dynamic -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , unix
                     , mtl
                     , safe
                     , text
                     , time
                     , utf8-string
                     , resourcet
                     , transformers
                     , conduit
                     , network-uri
                     , http-conduit
                     , http-types
                     , persistent-mysql
                     , optparse-applicative
                     , async
                     , tractor
  default-language:    Haskell2010

test-suite tractor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtl
                     , resourcet
                     , conduit
                     , tractor
                     , time
                     , text
                     , text
                     , bytestring
                     , utf8-string
                     , network-uri
                     , connection
                     , http-types
                     , http-conduit
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ak1211/tractor
